[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/EnemyBomb/enemybombsprtsht.png" type="Texture" id=1]
[ext_resource path="res://Characters/Hitboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/EnemyBomb/enemybomb.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Throw"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_bomb"
}, {
"args": [  ],
"method": "throw_finished"
} ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 18 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 80.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 80.0

[node name="EnemyBomb" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Throw = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="DetectionRight" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0.184314 )
collision_layer = 16

[node name="CollisionShape2D" parent="DetectionRight" index="0"]
position = Vector2( -44, -2 )
shape = SubResource( 6 )

[node name="DetectionLeft" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="CollisionShape2D" parent="DetectionLeft" index="0"]
modulate = Color( 1, 1, 1, 0.258824 )
position = Vector2( 36, -2 )
shape = SubResource( 5 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="DetectionRight" to="." method="_on_DetectionRight_area_entered"]
[connection signal="area_entered" from="DetectionLeft" to="." method="_on_DetectionLeft_area_entered"]

[editable path="Hurtbox"]
[editable path="DetectionRight"]
[editable path="DetectionLeft"]
